# HuffmanCodingHaskell

./: .gitignore  DataTypes.hs  IOHandler.hs  Main.hs  Processing.hs  README.md  Utils.hs  huffman-compressor.cabal
