cabal-version:      2.4
name:               huffman-compressor
version:            1.0.0
synopsis:           Canonical Huffman Coding Compressor
author:             Sahan
maintainer:         sahan@example.com
category:           Compression
build-type:         Simple

executable compressor
    main-is:          Main.hs
    other-modules:    DataTypes
                    , Processing
                    , IOHandler
                    , Utils
    
    build-depends:    base >=4.14 && <5
                    , bytestring
                    , containers
                    , parallel
    
    hs-source-dirs:   .
    default-language: Haskell2010
    
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
